[FIX] Removed overflow for icon card texts

--- a/components/icon-card/icon-card.css
+++ b/components/icon-card/icon-card.css
@@ -31,11 +31,11 @@
   font-family: "Lato-Light";
   font-size: var(--font-size-base);
   color: var(--text_color);
-  overflow: hidden;
+  /* overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 5;
   line-clamp: 5;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: vertical; */
 }
 
 .mf_cards_side_img_icon_card img {
